Fixed waving animation, modified the resposive design of hero's class on the 3d objects and rmeoved the picture of the contacts page because it was making the design much more complex and not responsive

--- a/src/index.css
+++ b/src/index.css
@@ -195,7 +195,29 @@ body {
   );
 }
 
-.min-h-screen_odd {
-  min-height: 120vh;
-  padding-bottom: calc(100px + 5vh);
+@keyframes wave-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  15% {
+    transform: rotate(14deg);
+  }
+  30% {
+    transform: rotate(-8deg);
+  }
+  40% {
+    transform: rotate(14deg);
+  }
+  50% {
+    transform: rotate(-4deg);
+  }
+  60% {
+    transform: rotate(10deg);
+  }
+  70% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
